fix: reject formulated fertilizer for single nutrient